<resources>
    <string name="app_name">Fleetech</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Driver Fleet Distance</string>
    <string name="menu_slideshow">Documents</string>
    <string name="menu_trips">My Trips</string>
    <string name="menu_payments">Payments</string>
    <string name="menu_incentive">Incentive</string>
    <string name="menu_signout">Sign out</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fleetech">Fleetech</string>
    <string name="register">Register</string>
    <string name="verifing_mobile_number_for_otp">Verifing Mobile Number For OTP</string>
    <string name="otp_verification"> Enter your number for OTP verification</string>
    <string name="otp">OTP</string>
    <string name="enter_4_digit_otp">Enter 4 digit OTP</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="enter_4_digit_password">Enter 4 digit Password</string>
    <string name="create_password">Create Password</string>
    <string name="re_enter_password">Re Enter Password</string>
    <string name="submit">Submit</string>
    <string name="menu_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="dialogMessage">Account Balance</string>
    \

</resources>