<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_docs"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_trips"
            android:title="@string/menu_trips" />
        <item
            android:id="@+id/nav_payments"
            android:title="@string/menu_payments" />

        <item
            android:id="@+id/nav_incentive"
            android:title="@string/menu_incentive" />

        <item
            android:id="@+id/nav_signout"
            android:title="@string/menu_signout" />
    </group>
</menu>