<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".activities.OTPActivity">

        <ImageView
            android:id="@+id/fleetTechTv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/fleetech"
            android:src="@drawable/app_icon"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/otpTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp"
            android:textColor="@color/black"
            style="@style/TextViewRegularStyle"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fleetTechTv" />

        <TextView
            android:id="@+id/enter_otp_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_4_digit_otp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            style="@style/TextViewRegularStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otpTv" />

        <com.example.fleetech.util.PinView
            android:id="@+id/editTextNumberPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:ems="10"
            android:textStyle="bold"
            android:inputType="numberPassword"
            android:textSize="20sp"
            android:textColor="@color/blacl_lowdark"
            app:itemCount="4"
            app:viewType="line"
            style="@style/PinWidget.PinView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_otp_tv" />

        <Button
            android:id="@+id/btnOTP"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/confirm_otp"
            android:padding="4dp"
            android:textSize="14sp"
            style="@style/TextViewRegularStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword" />

        <TextView
            android:id="@+id/resendOTPTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/resend_otp"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.845"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnOTP"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:layout_marginEnd="189dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>